--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -63,7 +63,7 @@
 
 @media only screen and (min-width: 900px) {
   .about-wrapper {
-    grid-template-columns: 1fr .75fr;
+    grid-template-columns: 1fr 0.75fr;
     gap: 25px;
   }
   .about__images,
